gcc/testsuite/rust/rustc/ui/impl-trait/in-trait/check-wf-on-non-defaulted-rpitit.rs
struct Wrapper<G: Send>(G);

trait Foo {
    fn bar() -> Wrapper<impl Sized>;
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

fn main() {}

